--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.1",
+    "express": "^5.1.0",
     "helmet": "^8.1.0",
     "joi": "^18.0.1",
     "mongoose": "^8.19.4",
