Refactor Vercel configuration to use 'dist/main.js' as the entry point and remove obsolete 'src/serverless.ts' file, streamlining the application structure.

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
   "builds": [
     {
-      "src": "dist/serverless.js",
+      "src": "dist/main.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/serverless.js"
+      "dest": "dist/main.js"
     }
   ]
 }
