Add rewrites to Vercel configuration for API routing, directing all requests to the API handler for improved request management.

--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,11 @@
       "dest": "dist/main",
       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api/:path*"
+    }
   ]
 }
