Update Vercel configuration to use 'dist/main.js' as the source and destination for routing, ensuring consistency in deployment paths.

--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/main",
+      "src": "dist/main.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/main",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/api/:path*"
+      "dest": "dist/main.js"
     }
   ]
 }
