Add authentication module with JWT support, including login functionality for brands, password hashing, and environment variable configuration for JWT secret. Update BrandController to handle authentication routes and modify related DTOs for login.

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ PORT=3000
 # MongoDB Configuration
 MONGODB_URI=mongodb://localhost:27017
 MONGODB_NAME=digidart_assignment
+
+JWT_SECRET=somesecretstring
